added a link from index to healthy_omelette. Added image to healthy_omelette page, with a description of a tasty asparagus omelette

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 <heading><h1>Odin Recipes</h1></heading>   
+<a href="recipes/healthy_omelette.html">Healthy Omelette</a>
     
 </body>
 
