added a new heading called Steps. Created a list of steps to create omelette. Added cheese item to the ingredients list

--- a/recipes/healthy_omelette.html
+++ b/recipes/healthy_omelette.html
@@ -31,8 +31,31 @@ and tastes <strong><em>Delicious!</em></strong></p>
 <li>Tbsp water</li>
 <li>Salt</li>
 <li>Pepper</li>
+<li>Cheese of your choice</li>
 </p>
 </ul>
+
+<p><h4>Steps</h4></p>
+
+<ol>
+<li>Roast cashews in a pan until golden brown 
+    (<em>this releases the flavour</em>)</li>
+<li><em>Combine the following in a bowl:</em></li> 
+<ul>
+<li>Eggs</li>
+<li>Parsely</li>
+<li>Water</li>    
+<li>Salt</li>
+<li>Pepper</li>
+<li>Cheese</li>
+<li>The previously roasted cashews</li>
+</ul>
+<li>Mix Bowl</li>
+<li>Add butter and olive oil into the pan you roasted the cashews in</li>
+<li>Add the omelette mix to the pan</li>
+<li>Add the asparagus to the pan, once the omelette has begun to set 
+    (<em>but is still fluid</em>)</li>
+</ol>
 
     
 </body>
