created a list of links for my index page. Added 2 new recipe files

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
-<heading><h1>Odin Recipes</h1></heading>   
-<a href="recipes/healthy_omelette.html">Healthy Omelette</a>
+<heading><h1>Odin Recipes</h1></heading>
+<ul>  
+<li><a href="recipes/healthy_omelette.html">Healthy Omelette</a></li>
+
+</ul>
     
 </body>
 
