added 2 more recipe links to index page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <heading><h1>Odin Recipes</h1></heading>
 <ul>  
 <li><a href="recipes/healthy_omelette.html">Healthy Omelette</a></li>
+<li><a href="recipes/blackberry_spinach_salad.html">Blackberry & Spinach Salad</a> </li>
+<li><a href="recipes/simple_pasta.html">Simple Olive Oil Pasta</a></li>
 
 </ul>
     
