added list of ingredients to simple_pasta

--- a/recipes/simple_pasta.html
+++ b/recipes/simple_pasta.html
@@ -18,3 +18,13 @@ alt="Simple pasta with olive oil. Lemons in the background">
 and tastes <strong><em>Magnificent!</em></strong></p>
 
 <p><h4>Ingredients</h4></p>
+
+<p>
+     <ul>
+     <li>Salt</li>   
+     <li>Pasta</li> 
+     <li>Olive Oil</li>
+     <li>Pepper</li>
+     
+     </p>
+     </ul>
