added list of ingredients to blackberry_spinach_salad

--- a/recipes/blackberry_spinach_salad.html
+++ b/recipes/blackberry_spinach_salad.html
@@ -17,3 +17,17 @@ alt="Spinach and blackberry salad">
 and tastes <strong><em>Scrumptious!</em></strong></p>
 
 <p><h4>Ingredients</h4></p>
+
+<ul>
+    <li>Blackberries</li>
+    <li>Spinach</li>
+    <li>Lemon juice</li>
+    <li>Tomatoes</li>
+    <li>Pepper</li>
+    <li>Salt</li>
+    <li>Olive oil</li>
+    <li>Balsamic Vinegar</li>
+
+
+    
+</ul>
