added 'steps' heading to both pasta and blackberry salad recipes

--- a/recipes/blackberry_spinach_salad.html
+++ b/recipes/blackberry_spinach_salad.html
@@ -27,7 +27,6 @@ and tastes <strong><em>Scrumptious!</em></strong></p>
     <li>Salt</li>
     <li>Olive oil</li>
     <li>Balsamic Vinegar</li>
-
-
-    
 </ul>
+
+<p><h4>Steps</h4></p>
