added 'Steps' ordered list to blackberry salad

--- a/recipes/blackberry_spinach_salad.html
+++ b/recipes/blackberry_spinach_salad.html
@@ -30,3 +30,8 @@ and tastes <strong><em>Scrumptious!</em></strong></p>
 </ul>
 
 <p><h4>Steps</h4></p>
+
+<ol>
+    <li>Put all ingredients into a bowl</li>
+    <li><strong><em>MIX!</em></strong></li>
+</ol>
