added 'Steps' list to simple_pasta

--- a/recipes/simple_pasta.html
+++ b/recipes/simple_pasta.html
@@ -30,3 +30,12 @@ and tastes <strong><em>Magnificent!</em></strong></p>
      </ul>
 
      <p><h4>Steps</h4></p>
+
+     <ol>
+          <li>Boil Pasta until ready</li>
+          <li>Strain Pasta</li>
+          <li>Pour Pasta into a bowl</li>
+          <li>Add Olive Oil, Salt, Pepper </li>
+          <li><strong><em>MIX!</em></strong></li>
+          <li><em>Enjoy.</em></li>
+     </ol>
