added 'Enjoy' to the healthy omelette and blackberry salad 'Steps'

--- a/recipes/blackberry_spinach_salad.html
+++ b/recipes/blackberry_spinach_salad.html
@@ -34,4 +34,5 @@ and tastes <strong><em>Scrumptious!</em></strong></p>
 <ol>
     <li>Put all ingredients into a bowl</li>
     <li><strong><em>MIX!</em></strong></li>
+    <li><em>Enjoy.</em></li>
 </ol>
