--- a/recipes/healthy_omelette.html
+++ b/recipes/healthy_omelette.html
@@ -55,6 +55,7 @@ and tastes <strong><em>Delicious!</em></strong></p>
 <li>Add the omelette mix to the pan</li>
 <li>Add the asparagus to the pan, once the omelette has begun to set 
     (<em>but is still fluid</em>)</li>
+    <li><em>Enjoy.</em></li>
 </ol>
 
     
