changed the dimensions of the images on index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 <heading><h1>Odin Recipes</h1></heading>
 <img src="https://mj-gallery.com/58f9b6d3-bcf4-46a3-a579-c0d2c37c65cf/grid_0.png"
-alt="WWII Battle of no reference, I jusst like the photo">
+alt="WWII Battle of no reference, I jusst like the photo"
+width="300"
+height="300" />
 <ul>  
 <li><a href="recipes/healthy_omelette.html">Healthy Omelette</a></li>
 <li><a href="recipes/blackberry_spinach_salad.html">Blackberry & Spinach Salad</a></li>
