--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <body>
 <heading><h1>Odin Recipes</h1></heading>
-<img src="https://mj-gallery.com/58f9b6d3-bcf4-46a3-a579-c0d2c37c65cf/grid_0.png"
+<img src="../../302443540_560835155732746_2543031356888956932_n.jpg"
 alt="WWII Battle of no reference, I jusst like the photo"
-width="300"
-height="300" />
+width="600"
+height="300">
 <ul>  
 <li><a href="recipes/healthy_omelette.html">Healthy Omelette</a></li>
 <li><a href="recipes/blackberry_spinach_salad.html">Blackberry & Spinach Salad</a></li>
