--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
 <heading><h1>Odin Recipes</h1></heading>
-<img src="../../302443540_560835155732746_2543031356888956932_n.jpg"
-alt="WWII Battle of no reference, I jusst like the photo"
-width="600"
+<img src="https://scontent.flhr1-1.fna.fbcdn.net/v/t1.15752-9/302443540_560835155732746_2543031356888956932_n.jpg?stp=dst-jpg_s1080x2048&_nc_cat=104&ccb=1-7&_nc_sid=ae9488&_nc_ohc=04Z9paJUJagAX8-SsVx&_nc_ht=scontent.flhr1-1.fna&oh=03_AVI0DnNFS6rynagVVLq7aQ4fXNqYHQHDis_MUVS7NktNDg&oe=6333708B"
+alt="ugly maddy and harry"
+width="300"
 height="300">
 <ul>  
 <li><a href="recipes/healthy_omelette.html">Healthy Omelette</a></li>
